fix(hero-image): image cropping was added and small image was fixed

--- a/src/components/ui/Article/components/Hero/hero.module.css
+++ b/src/components/ui/Article/components/Hero/hero.module.css
@@ -1,15 +1,18 @@
 .hero {
   display: flex;
   width: 100%;
+  gap: 0.5rem;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  max-height: 600px;
 }
 
 .image {
-  width: 100%;
-  height: auto;
-  aspect-ratio: 2 / 1;
+  object-fit: none;
+  width: 1200px;
+  max-width: 100%;
+  height: 600px;
 }
 
 .caption {
